# thought

./: .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  THEME_TUTORIAL.md  pipeline.md
.github/workflows/: perf-main-codspeed.yml  perf-main-flamegraph.yml
assets/: thought-search.js
benches/: e2e_generate.rs
benchmark/: .gitignore  README.md  REPORT.md  run.rs
benchmark/hexo-package/: package.json
benchmark/hexo-theme/: _config.yml
benchmark/hexo-theme/layout/: index.ejs  post.ejs
core/: Cargo.toml
core/src/: article.rs  category.rs  lib.rs  metadata.rs
plugin/: Cargo.toml
plugin-macro/: Cargo.toml
plugin-macro/src/: lib.rs
plugin/src/: lib.rs
plugin/wit/: plugin.wit
scripts/ci/: bootstrap_benchmark_workspace.sh
src/: article.rs  build.rs  cache.rs  category.rs  config.rs  engine.rs  error.rs  generate.rs  init.rs  lib.rs  main.rs  metadata.rs  new.rs  plugin.rs  search.rs  serve.rs  slug.rs  switch.rs  types.rs  utils.rs  workspace.rs
src/cli/: build.rs  category.rs  clean.rs  generate.rs  init.rs  main.rs  new.rs  plugin.rs  serve.rs  switch.rs  translate.rs
src/cli/templates/: gitignore  hook_lib.rs  style.css  theme_article.html  theme_index.html  theme_lib.rs
src/plugin/: bindings.rs  resolver.rs
src/types/: article.rs  category.rs  convert.rs  metadata.rs
thought/: Cargo.toml
thought-api/: Cargo.toml
thought-api/src/: article.rs  cache.rs  category.rs  lib.rs  util.rs
thought-core/: Cargo.toml
thought-core/src/: article.rs  category.rs  lib.rs
thought/src/: article.rs  cache.rs  main.rs  render.rs  test.rs  util.rs  workspace.rs
wit/: thought-plugin.wit
