[package]
name = "thought"
version = "0.1.0"
edition = "2024"

[dependencies]
thought-core.workspace = true
smol = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
url = { workspace = true }
whoami = { workspace = true }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
git2 = "0.18.1"
hex = "0.4.3"
regex = "1.10"
flate2.workspace = true
tar.workspace = true

[workspace]
members = ["core", "plugin-macro", "themes/zenflow", "plugin"]
resolver = "2"

[workspace.dependencies]
thought = { path = "." }
thought-core = { path = "core" }
thought-plugin-macro = { path = "plugin-macro" }
thought-plugin = { path = "plugin" }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["serde-well-known","macros"] }
toml = "0.8.23"
thiserror = "1.0.69"
url = { version = "2.5.7", features = ["serde"] }
pulldown-cmark = "0.10.3"
smol = "2.0.2"
serde_json = "1.0.145"
wasmtime = "21.0.2"
wasmtime-wasi = "21.0.2"
bincode = "1.3.3"
anyhow = "1.0.100"
askama = "0.12.1"
askama_derive = "0.12.1"
whoami = "1.4.1"
flate2 = "1.0.28"
tar = "0.4.40"
log = "0.4.21"

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions =  { level = "allow", priority = 1 }
