[package]
name = "thought"
version = "0.1.0"
edition = "2024"

[dependencies]
thought-core.workspace = true
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
url.workspace = true
whoami = { workspace = true }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
git2 = "0.18.3"
hex = "0.4.3"
regex = "1.12"
flate2.workspace = true
tar.workspace = true
wasmtime = "38.0.3"
wasmtime-wasi = "38.0.3"
tokio-stream = "0.1.17"

[workspace]
members = ["core", "plugin-macro", "themes/zenflow", "plugin"]
resolver = "2"

[workspace.dependencies]
thought = { path = "." }
thought-core = { path = "core" }
thought-plugin-macro = { path = "plugin-macro" }
thought-plugin = { path = "plugin" }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["serde-well-known","macros"] }
toml = "0.8.23"
thiserror = "1.0.69"
url = { version = "2.5.7", features = ["serde"] }
pulldown-cmark = "0.10.3"
async-fs = "2.2.0"
tokio = { version = "1.48.0", features = ["full"]}
serde_json = "1.0.145"
bincode = "1.3.3"
anyhow = "1.0.100"
askama = "0.12.1"
askama_derive = "0.12.5"
whoami = "1.6.1"
flate2 = "1.1.5"
tar = "0.4.44"
log = "0.4.28"

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions =  { level = "allow", priority = 1 }
