[package]
name = "thought"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url.workspace = true
whoami = { workspace = true }
zenwave = { git = "https://github.com/zen-rs/zenwave" }
wat = "1.0.69"
git2 = "0.18.3"
hex = "0.4.3"
regex = "1.12"
flate2.workspace = true
tar.workspace = true
wasmtime = "38.0.3"
wasmtime-wasi = "38.0.3"
tokio-stream = "0.1.17"
futures = "0.3.31"
sha2 = "0.10.9"
pulldown-cmark.workspace = true
toml.workspace = true
thought-plugin.workspace = true
unicode-segmentation = "1.11.0"
indicatif = { version = "0.18.0", optional = true }
clap = { version = "4.5.49", features = ["derive"], optional = true }
color-eyre = { version = "0.6.5", features = ["issue-url"], optional = true }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["json","env-filter"]}
tracing-error = "0.2.1"
tantivy = "0.25.0"
redb.workspace = true
rayon = "1.10.0"
skyzen = { git = "https://github.com/zen-rs/skyzen" }
mime_guess = "2.0"


[workspace]
members = ["plugin"]
resolver = "2"

[workspace.dependencies]
thought = { path = "." }
thought-plugin = { path = "plugin" }
serde = { version = "1.0.228", features = ["derive"] }
time = { version = "0.3.44", features = ["serde-well-known","macros"] }
toml = "0.8.23"
thiserror = "1.0.69"
url = { version = "2.5.7", features = ["serde"] }
pulldown-cmark = "0.10.3"
async-fs = "2.2.0"
tokio = { version = "1.48.0", features = ["full"]}
serde_json = "1.0.145"
bincode = "1.3.3"
anyhow = "1.0.100"
whoami = "1.6.1"
flate2 = "1.1.5"
tar = "0.4.44"
redb = "3.0.2"

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions =  { level = "allow", priority = 1 }

[[bin]]
path = "src/cli/main.rs"
name = "thought"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:indicatif","dep:clap","dep:color-eyre"]
