[package]
name = "thought-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
time.workspace = true
toml.workspace = true
thiserror.workspace = true
url.workspace = true
pulldown-cmark.workspace = true
async-fs.workspace = true
sha2 = "0.10.9"
serde_json.workspace = true

[lints]
workspace = true

[features]
default = ["io"]
std = []
io = ["std"]
